# telepatia_ai_backend_api

./: .gitignore  .plan_tests.md  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.cursor/rules/: fastapi.mdc
app/: __init__.py  config.py  database.py  main.py
app/prompts/: __init__.py  medical_extraction_prompt.py
app/routers/: health.py  message.py
app/schemas/: health.py  message.py
app/services/: __init__.py  audio_service.py  google_genai_service.py
tests/: conftest.py  test_health.py  test_services.py  test_text_processing.py
